--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ baseurl: "/affiliates-jekyll-theme"
 permalink: "/:title/"
 logo: 'assets/images/logo.png'
 favicon: 'assets/images/favicon.ico'
-author: Sal
+author: mai
 paginate: 30
 disqus: 'demowebsite'
 locale: en_us
@@ -24,9 +24,9 @@ ganalytics: UA-113961478-1
 
 # Authors
 authors:
-  sal:
-    name: Sal
-    display_name: Sal
+  mai:
+    name: Mai Trần
+    display_name: Mai Trần
     avatar: 'assets/images/sal.png'
     email: wowthemesnet@gmail.com
     web: https://www.wowthemes.net/category/jekyll-themes/
