--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
-title: "Affiliates"
+title: "BSH Tràng An"
 email: wowthemesnet@gmail.com
+phone: 0999.999.999
 timezone: UTC
 baseurl: "/affiliates-jekyll-theme"
 permalink: "/:title/"
