--- a/_data/menus.yml
+++ b/_data/menus.yml
@@ -10,7 +10,7 @@ topmenu:
 - title: Contact
   url: "contact/"
 
-- title: Get this theme  
+- title: {{ site.phone }}  
   url: https://bootstrapstarter.com/template-affiliates-bootstrap-jekyll/
   class: "ml-2 btn btn-dark text-white px-3"
   external: true
