--- a/_data/menus.yml
+++ b/_data/menus.yml
@@ -1,15 +1,15 @@
 # Top Menu
 topmenu:
 
-- title: Home
-  url: ""
+# - title: Home
+#   url: ""
 
-- title: About
-  url: "about/"
+# - title: About
+#   url: "about/"
 
-- title: Liên hệ
-  url: "tel:+0999999999"
-  external: true
+# - title: Liên hệ
+#   url: "tel:+0999999999"
+#   external: true
 
 - title: 0999.999.999
   url: tel:+0999999999
