--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 title: "BSH Tràng An"
 email: wowthemesnet@gmail.com
 phone: "**0999.999.999**"
+call: "tel:+0999999999"
 timezone: UTC
 baseurl: "/affiliates-jekyll-theme"
 permalink: "/:title/"
