--- a/_data/menus.yml
+++ b/_data/menus.yml
@@ -11,8 +11,8 @@ topmenu:
 #   url: "tel:+0999999999"
 #   external: true
 
-- title: 0999.999.999
-  url: tel:+0999999999
+- title: 0977287042
+  url: tel:+0977287042
   class: "ml-2 btn btn-dark text-white px-3"
   external: true
 
