--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ logo: 'assets/images/logo.png'
 favicon: 'assets/images/favicon.ico'
 author: mai
 paginate: 30
-disqus: 'demowebsite'
+disqus: 'bshtrangan-com'
 locale: en_us
 lang: en_us
 feed_items: 10
