--- a/_config.yml
+++ b/_config.yml
@@ -30,10 +30,10 @@ authors:
     name: Mai Trần
     display_name: Mai Trần
     avatar: 'assets/images/sal.png'
-    email: wowthemesnet@gmail.com
-    web: https://www.wowthemes.net/category/jekyll-themes/
-    twitter: https://twitter.com/wowthemesnet
-    description: "Author of Affiliates, a template available for WordPress, HTML, Ghost and Jekyll. You are currently previewing Jekyll template demo."
+    # email: wowthemesnet@gmail.com
+    # web: https://www.wowthemes.net/category/jekyll-themes/
+    # twitter: https://twitter.com/wowthemesnet
+    description: "Trưởng phòng kinh doanh BSH Tràng An"
 
 # Social
 social:
