--- a/_data/menus.yml
+++ b/_data/menus.yml
@@ -12,7 +12,7 @@ topmenu:
 #   external: true
 
 - title: 0977.287.042
-  url: tel:+0977287042
+  url: tel:0977287042
   class: "ml-2 btn btn-dark text-white px-3"
   external: true
 
