--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: "BSH Tràng An"
 email: wowthemesnet@gmail.com
 phone: "**0977.287.042**"
-call: "tel:+0977287042"
+call: "tel:0977287042"
 timezone: UTC
 baseurl: "/affiliates-jekyll-theme"
 permalink: "/:title/"
