--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: "BSH Tràng An"
 email: wowthemesnet@gmail.com
-phone: "**0977.287.042**"
+phone: "0977.287.042"
 call: "tel:0977287042"
 timezone: UTC
 baseurl: "/affiliates-jekyll-theme"
